--- a/Neocom.WebUI/package.json
+++ b/Neocom.WebUI/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.1.2",
     "@angular/platform-server": "^4.1.2",
     "@angular/router": "^4.1.2",
+    "angular2-moment": "^1.7.0",
     "core-js": "^2.4.1",
     "ng2-menu": "^0.5.1",
     "ngx-cookie": "^1.0.0",
