--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -61,13 +61,20 @@
 <!-- 			<scope>system</scope> -->
 <!-- 			<systemPath>${project.basedir}/privatelibs/hsqldb-2.4.0.jar</systemPath> -->
 <!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>DimensinfinIndustries</groupId> -->
-<!-- 			<artifactId>NeoCom.Models</artifactId> -->
-<!-- 			<version>1.3.0</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.3.0.jar</systemPath> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>DimensinfinIndustries</groupId>
+			<artifactId>NeoCom.Models.libs</artifactId>
+			<version>1.3.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/NeoCom.Models.libs-1.3.0.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>DimensinfinIndustries</groupId>
+			<artifactId>NeoCom.Models</artifactId>
+			<version>1.3.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.3.1.jar</systemPath>
+		</dependency>
 		<dependency>
 			<groupId>GoldeGnu</groupId>
 			<artifactId>jeveassets</artifactId>
@@ -75,6 +82,7 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/privatelibs/jeveassets.3.1.2.jar</systemPath>
 		</dependency>
+		
 
 		<!-- S P R I N G B O O T -->
 		<dependency>
