--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -43,27 +43,34 @@
 
 	<dependencies>
 		<!-- L O C A L ... L I B R A R I E S ... D E P E N D E N C I E S -->
-		<dependency>
-			<groupId>DimensinfinIndustries</groupId>
-			<artifactId>CoreBase.core</artifactId>
-			<version>1.5.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.5.0.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>DimensinfinIndustries</groupId>
-			<artifactId>EveDevelopments.evemarket</artifactId>
-			<version>1.0.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>GoldeGnu</groupId>
-			<artifactId>jeveassets</artifactId>
-			<version>3.1.2</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/jeveassets.3.1.2.jar</systemPath>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>DimensinfinIndustries</groupId> -->
+<!-- 			<artifactId>CoreBase.core</artifactId> -->
+<!-- 			<version>1.5.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.5.0.jar</systemPath> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>DimensinfinIndustries</groupId> -->
+<!-- 			<artifactId>EveDevelopments.evemarket</artifactId> -->
+<!-- 			<version>1.0.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>DimensinfinIndustries</groupId> -->
+<!-- 			<artifactId>Neocom.Models</artifactId> -->
+<!-- 			<version>1.4.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/Neocom.Models-1.4.0.jar</systemPath> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>GoldeGnu</groupId> -->
+<!-- 			<artifactId>jeveassets</artifactId> -->
+<!-- 			<version>3.1.2</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/jeveassets.3.1.2.jar</systemPath> -->
+<!-- 		</dependency> -->
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.hsqldb</groupId> -->
 <!-- 			<artifactId>hsqldb</artifactId> -->
@@ -95,21 +102,21 @@
 		</dependency>
 
 		<!-- A D D I T I O N A L ... L I B R A R I E S -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.21</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.slf4j</groupId> -->
+<!-- 			<artifactId>slf4j-api</artifactId> -->
+<!-- 			<version>1.7.25</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-		<dependency>
-			<groupId>com.beimin</groupId>
-			<artifactId>eveapi</artifactId>
-			<version>${eveapi.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.beimin</groupId> -->
+<!-- 			<artifactId>eveapi</artifactId> -->
+<!-- 			<version>${eveapi.version}</version> -->
+<!-- 		</dependency> -->
 		<!-- <dependency> -->
 		<!-- <groupId>net.sf.ehcache</groupId> -->
 		<!-- <artifactId>ehcache</artifactId> -->
