--- a/Neocom.MicroServices/.classpath
+++ b/Neocom.MicroServices/.classpath
@@ -30,8 +30,8 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="privatelibs/EveDevelopments.evemarket.1.0.0.jar"/>
 	<classpathentry kind="lib" path="privatelibs/jeveassets.3.1.2.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.Models"/>
 	<classpathentry kind="lib" path="privatelibs/CoreBase.core-1.5.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Neocom-DataManagement"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
