--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Neocom.MicroServices/MarketDataService.store
 *.otf
 Documentation/~$emiminaryNotes.odt
 NeoCom.MicroServices/.gradle/
+NeoCom.MicroServices/gradle/
+NeoCom.MicroServices/gradlew
+NeoCom.MicroServices/gradlew.bat
+NeoCom.MicroServices/out/
