--- a/Neocom.MicroServices/src/test/resources/properties/databasedefinition.properties
+++ b/Neocom.MicroServices/src/test/resources/properties/databasedefinition.properties
@@ -1,8 +1,8 @@
 R.database.neocom.databasehost=jdbc:mysql://localhost:3306
 R.database.neocom.databasename=neocom
-R.database.neocom.databaseuser=NEOCOMTEST
+R.database.neocom.databaseuser=NEOCOM
 R.database.neocom.databasepassword=01.Alpha
 R.database.neocom.databaseversion=109
 R.database.sdedatabase.databaseschema=jdbc:sqlite
 R.database.sdedatabase.databasepath=src/main/resources/
-R.database.sdedatabase.databasename=sde.db
+R.database.sdedatabase.databasename=sdetest.sqlite
