--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation project(path: ':CoreBaseLibrary')
     implementation project(path: ':NeoCom.Model')
 //    implementation project(path: ':NeoCom.DataMngmt')
-//    implementation project(path: ':ESI.SwaggerApi')
+    implementation project(path: ':ESI.SwaggerApi')
 //    implementation project(path: ':ApplicationCloudAdapter')
 
     // L O C A L    L I B R A R I E S
