--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -1,7 +1,18 @@
 apply plugin: 'java'
 
+buildscript {
+    repositories {
+        maven { url 'https://repo.spring.io/libs-snapshot' }
+    }
+
+    dependencies {
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.0.BUILD-SNAPSHOT'
+    }
+}
+apply plugin: 'org.springframework.boot'
+
 group 'DimensinfinIndustries'
-version '0.10.9'
+version '0.11.0'
 archivesBaseName = 'NeoCom.MicroServices'
 
 sourceCompatibility = 1.8
@@ -15,35 +26,45 @@ repositories {
 }
 
 sourceSets {
-    main.java.srcDirs += 'src/main/java-datamngmt'
-    main.java.srcDirs += 'src/main/java-incubation'
+//    main.java.srcDirs += 'src/main/java-datamngmt'
+//    main.java.srcDirs += 'src/main/java-incubation'
 //    main.java.srcDirs += 'src/main/java-android'
+}
+
+jar {
+    enabled = true
+}
+jar {
+    manifest {
+        attributes("Implementation-Title": "Gradle",
+                "Implementation-Version": version)
+        writeTo("$buildDir/Manifest.mf")
+    }
+}
+bootJar {
+    manifest {
+        attributes 'Start-Class': 'org.dimensinfin.eveonline.neocom.NeoComMicroServiceApplication'
+    }
 }
 
 dependencies {
     // P R O J E C T    D E P E N D E N C I E S
     implementation project(path: ':CoreBaseLibrary')
     implementation project(path: ':NeoCom.Model')
-//    implementation project(path: ':NeoCom.DataMngmt')
     implementation project(path: ':ESI.SwaggerApi')
-//    implementation project(path: ':ApplicationCloudAdapter')
 
     // L O C A L    L I B R A R I E S
-//    api files('libs/jeveassets.3.1.2.jar')
-//    implementation files('libs/CoreBase.core-2.0.1.jar')
-//    api files('libs/ESISwaggerApi-1.0.0.jar')
 
     // M O D U L E    D E P E N D E N C I E S
     // S P R I N G B O O T
     implementation 'org.springframework.boot:spring-boot-starter-actuator:1.3.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:1.3.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-cache:1.3.5.RELEASE'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-eureka:Brixton.RELEASE'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-hystrix:Brixton.RELEASE'
 
     // N E O C O M . M O D E L
     implementation 'joda-time:joda-time:2.3'
     implementation 'com.beimin:eveapi:6.0.6'
+    implementation 'org.htmlparser:htmlparser:2.1'
     implementation 'com.github.scribejava:scribejava-core:4.2.0'
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -51,6 +72,7 @@ dependencies {
     implementation 'com.annimon:stream:1.1.9'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.6'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.6'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.8.6'
     implementation 'org.apache.commons:commons-lang3:3.7'
 
     implementation 'org.slf4j:slf4j-api:1.7.25'
@@ -64,8 +86,11 @@ dependencies {
     // D E P E N D E N C Y    F R O M    L I B R A R I E S
 
     // T E S T I N G
+    // P R O J E C T    D E P E N D E N C I E S
+    testImplementation project(path: ':NeoCom.Model')
+
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.slf4j:slf4j-simple:1.7.25'
+//    testImplementation 'org.slf4j:slf4j-simple:1.7.25'
     testImplementation 'joda-time:joda-time:2.3'
     testImplementation 'com.j256.ormlite:ormlite-core:4.48'
     testImplementation 'com.j256.ormlite:ormlite-jdbc:4.48'
