--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -53,9 +53,15 @@ dependencies {
 
     // M O D U L E    D E P E N D E N C I E S
     // S P R I N G B O O T
-//    implementation 'org.springframework.boot:spring-boot-starter-actuator:1.3.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:1.3.5.RELEASE'
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator:1.3.5.RELEASE'
 //    implementation 'org.springframework.boot:spring-boot-starter-cache:1.3.5.RELEASE'
+
+//    implementation 'org.springframework.boot:spring-boot-starter-web:2.0.0.RELEASE'
+//    implementation 'org.springframework.session:spring-session-core:2.0.2.RELEASE'
+//    implementation 'org.springframework.session:spring-session-data-redis:1.0.0.BUILD-SNAPSHOT'
+    implementation 'org.springframework.data:spring-data-redis:1.4.1.RELEASE'
+    implementation 'redis.clients:jedis:2.4.1'
 
     // N E O C O M . M O D E L
     implementation 'joda-time:joda-time:2.3'
