--- a/Neocom.MicroServices/settings.gradle
+++ b/Neocom.MicroServices/settings.gradle
@@ -1,12 +1,7 @@
 rootProject.name = 'NeoCom.MicroServices'
 
-//include ':CoreBaseLibrary'
-//project(':CoreBaseLibrary').projectDir = new File('D:\\Development\\Libraries Base\\Corebase 2.0.x\\org.dimensinfin.core')
-//include ':ApplicationCloudAdapter'
-//project(':ApplicationCloudAdapter').projectDir = new File('D:\\Development\\POCProjects\\POCDataCloud\\ApplicationCloudAdapter')
 include ':NeoCom.Model'
-project(':NeoCom.Model').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt 0.11.x\\NeoCom.Model')
+project(':NeoCom.Model').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt Infinity\\NeoCom' +
+        '.Model')
 include ':ESI.SwaggerApi'
-project(':ESI.SwaggerApi').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt 0.11.x\\ESI.SwaggerApi')
-//include ':Neocom.MarketDataService'
-//project(':Neocom.MarketDataService').projectDir = new File('D:\\Development\\IntelliJProjects\\NeoCom WebUI\\NeoCom WebUI 0.11.x\\Neocom.MarketDataService')
+project(':ESI.SwaggerApi').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt Infinity\\ESI.SwaggerApi')
