--- a/NeoCom.Incubation/package.json
+++ b/NeoCom.Incubation/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-encryption-service": "^0.1.0",
     "angular-font-awesome": "^3.1.2",
     "angular-oauth2-oidc": "^3.1.4",
     "bootstrap": "^4.0.0",
@@ -29,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "ng-drag-drop": "^4.0.0",
     "ng2-inline-editor": "^0.1.1-alpha.20",
+    "ng2-web-cryptography": "0.0.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
