--- a/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/databasedefinition.properties
@@ -10,7 +10,7 @@
 #  Defines the NeoCom and the SDE database connection characteristics.
 R.database.neocom.databasehost=jdbc:mysql://localhost:3306
 R.database.neocom.databasename=neocom
-R.database.neocom.databaseuser=NEOCOM
+R.database.neocom.databaseuser=NEOCOMTEST
 R.database.neocom.databasepassword=01.Alpha
 R.database.neocom.databaseversion=110
 R.database.sdedatabase.databaseschema=jdbc:sqlite
